fix: cancel and register button not responsive
refactor: font-sizes converted to em.
refactor: adjusted the width of form-container

--- a/public_html/css/register.css
+++ b/public_html/css/register.css
@@ -10,6 +10,7 @@
 body {
     font-family: var(--fontPoppins);
     background-image: url(../img/Background-Pattern.jpg);
+    font-size: 62.5%;
 }
 
 .parent-container {
@@ -45,7 +46,8 @@ body {
 .snackwise-label{
     font-family: var(--fontOutfit);
     font-weight: bold;
-    font-size: 30px;
+    font-size: 3.0em
+;
 }
 
 .brand-name .red {
@@ -63,14 +65,15 @@ body {
 .form-header h3 {
     font-family: 'Outfit', sans-serif;
     font-weight: bold;
-    font-size: 36px;
+    font-size: 3.6em;
     color: var(--snackRed);
 }
 .input-group-text {
     border-radius:  0 5px 5px 0 !important;
-  border: none;
-  background-color: #eeeeee;
+    border: none;
+    background-color: #eeeeee;
     padding: 1.53em 1.3em;
+    font-size: 1.7em;
 }
 .input-section {
     margin: 2em 0;
@@ -78,6 +81,7 @@ body {
 
 .group-title {
     font-weight: bold;
+    font-size: 1.6em;
 }
 
 .form-group input[type="text"], input[type="password"], input[type="text"] {
@@ -88,6 +92,7 @@ body {
     margin: 1em 0;
     padding: 1em;
     width: 100%;
+    font-size: 1.6em;
 }
 
 .password-container {
@@ -96,10 +101,10 @@ body {
 
 .password-container .toggler {
     position: absolute;
-    top: 30px;
+    top: 32px;
     right: 30px;
     color: #75758A;
-    font-size: 1.2em;
+    font-size: 1.7em;
     cursor: pointer;
     z-index: 2;
 }
@@ -112,6 +117,10 @@ body {
     padding: 1em;
 }
 
+.sign-in-prompt-txt {
+    font-size: 1.5em;
+}
+
 .form-end-btn {
     display: flex;
     flex-direction: row;
@@ -121,24 +130,24 @@ body {
 
 #register {
     border-radius: 10px;
-    font-size: 18px;
-    padding: .8em 0; 
-    margin: 1em ;
-    background-color: var(--snackRed);
+    font-size: 1.8em;
     width: 10em;
+    padding: .8em 0; 
+    background-color: var(--snackRed);
 }
 
 #cancel {
     margin: 0 3em;
     color: var(--snackRed);
-    font-size: 18px;
+    font-size: 1.8em;
     text-decoration: none;
 }
 
 @media (min-width: 768px) {
 
     .form-container {
-        width: 35em;
+        width: 50em;
+        margin: 1em 0;
     }
 
 }
@@ -164,7 +173,7 @@ input[type="password"]::-ms-clear {
     margin-left: 30px;
 }
 .password_requirements h6{
-   font-size: 14px;
+   font-size: 1.4em;
    margin-top: -6px;
 }
 .password_requirements #length_con{
